--- a/NEW_DEC18/Scripts/new_models.Rmd
+++ b/NEW_DEC18/Scripts/new_models.Rmd
@@ -2,7 +2,7 @@
 title: "Diversity and Connection"
 author: "DHP"
 date: "January 11, 2019"
-output: html_document
+output: githug_document
 editor_options: 
   chunk_output_type: console
 ---
@@ -12,64 +12,58 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-```{r cars}
+```{r}
 library(lattice)
-dflmer <- readRDS("dflmer_w.rds")
+library(ggplot2)
+library(tidyverse)
+dflmer <- readRDS("NEW_DEC18/Tables/dflmer_w.rds")
+dflmer$EPTRichness <- dflmer$GastRichness + dflmer$PlecRichness + dflmer$TRichRichness 
+dflmer$fstat <- factor(paste(dflmer$station, dflmer$site))
 str(dflmer)
-plot(dflmer$RarRichness ~ log(dflmer$Overflow))
-hist(dflmer$RarRichness)
-plot(dflmer$FRic ~ log(dflmer$Overflow))
-hist(dflmer$FRic)
 
-e <- ggplot(dflmer, aes(log(Overflow+1),GastRichness))
-e + geom_point()
+tab_long_orders <- gather(dflmer, key = order, value = richness, c(5:10,21))
 
-e <- ggplot(dflmer, aes(F1,GastRichness))
-e+geom_point()
+f_brut_o <- tab_long_orders %>% 
+  filter(order %in% c("EPTRichness", "GastRichness")) %>% 
+  ggplot(aes(Overflow, richness,color = season))
+f_brut_f1 <- tab_long_orders %>% 
+  filter(order %in% c("EPTRichness", "GastRichness")) %>% 
+  ggplot(aes(F1, richness,color = season))
+f_log_o <- tab_long_orders %>% 
+  filter(order %in% c("EPTRichness", "GastRichness")) %>% 
+  ggplot(aes(log(Overflow+1), richness,color = season))
 
-tab_long_orders <- gather(dflmer, key = order, value = richness, 5:10)
 
-f <- ggplot(tab_long_orders, aes(log(Overflow), richness))
-f + geom_point() + facet_wrap(vars(order)) 
+f_brut_o + geom_point() + facet_wrap(vars(order)) 
+f_log_o + geom_point() + facet_wrap(vars(order)) 
+f_brut_f1 + geom_point() + facet_wrap(vars(order))
 
 ```
 
 
 
-```{r pressure, echo=FALSE}
+```{r}
 library(lme4)
 
 names(dflmer)
-m1 <- lm(GastRichness ~ I(Overflow^2)+season, data=dflmer)
+m1 <- lm(GastRichness ~ log(Overflow+1)+season, data=dflmer)
 
 
+mm1 <-  lmer(GastRichness ~ Overflow + season + (1|station), data=dflmer, REML = F)
+mm1_1 <-  lmer(GastRichness ~ F1 + season + (1|station), data=dflmer, REML = F)
+mm1_2 <-  lmer(GastRichness ~ log(Overflow+1) + season + (1|station), data=dflmer, REML = F)
 
-dflmer$fstat <- factor(paste(dflmer$station, dflmer$site))
-mm1 <-  lmer(GastRichness ~ Overflow + season + (1|station), data=dflmer)
-summary(mm1)
-
-mm2 <-  lmer(RarRichness~ F1+season+ 1|fstat,data=dflmer)
-summary(mm2)
-
-
-plot(mm1)
-anova(mm1)
-plot(mm2)
+mm2 <-  lmer(EPTRichness ~ Overflow + season + (1|station), data=dflmer, REML = F)
+mm2_1 <-  lmer(EPTRichness ~ F1 + season + (1|station), data=dflmer, REML = F)
+mm2_2 <-  lmer(EPTRichness ~ log(Overflow+1) + season + (1|station), data=dflmer, REML = F)
 
 
+anova(mm1,mm1_1, mm1_2)
+anova(mm2,mm2_1, mm2_2)
 
-library(lattice)
-plot(dflmer$RarRichness~factor(cut(dflmer$Overflow,3)))
-plot(dflmer$RarRichness~factor(cut(dflmer$F1,3)))
-plot(dflmer$FRic~factor(cut(dflmer$F1,3)))
-plot(dflmer$FRic~factor(cut(dflmer$Overflow,3)))
-dotplot(dflmer$FRic~log(dflmer$Overflow+1)|factor(dflmer$year))
+AIC(mm1,mm1_1, mm1_2)
+AIC(mm2,mm2_1, mm2_2)
 
-factor(dflmer$Overflow)
 
-library(MASS)
-al <- lda(cut(dflmer$F1,3)~dflmer$RarRichness)
-x11()
-plot(al)
 ```
 
